# django-model-extensions

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  run_tests.sh  setup.cfg
.github/workflows/: python-app.yml
django_model_extensions/: apps.py  models.py
tests/: test_django_model_extensions.py  test_models.py
tests/testapp/: admin.py  models.py  settings.py
tests/testapp/fixtures/: auth.json  testapp.json  testdata.json
tests/testapp/migrations/: 0001_initial.py  0002_createdupdatedtimestamptestmodel.py
